contents/ja: replace 'game library' with 'game engine'

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -5,7 +5,7 @@
 </style>
 <div class="grid-container">
   <div class="grid-item-2">
-    <h1 class="big"><span class="main">Ebitengine<span class="tm">™</span></span><span class="sub">A dead simple 2D game library for Go</span></h1>
+    <h1 class="big"><span class="main">Ebitengine<span class="tm">™</span></span><span class="sub">A dead simple 2D game engine for Go</span></h1>
     <p>Ebitengine (エビテンジン) (旧称 Ebiten) は<a href="https://golang.org/">プログラミング言語 Go</a> のオープンソースなゲームエンジンです。シンプルな API を使って、マルチプラットフォームな 2D ゲームを開発することができます。</p>
     <ul class="toplinks">
       <li><img src="/images/github.png" width="16" height="16" alt="GitHub"><a href="https://github.com/hajimehoshi/ebiten"><code>hajimehoshi/ebiten</code></a> (<a href="/ja/documents/install.html">インストール</a>)</li>
