contents: fix invalid links

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -19,19 +19,19 @@
 <div class="grid-container">
   <div class="grid-item-1">
     <h3>2048</h3>
-    <p class="img thumbnail"><a href="examples/2048.html"><img src="/images/examples/2048.png" width="400" height="300" alt="2048"></a></p>
+    <p class="img thumbnail"><a href="/ja/examples/2048.html"><img src="/images/examples/2048.png" width="400" height="300" alt="2048"></a></p>
   </div>
   <div class="grid-item-1">
     <h3>Blocks</h3>
-    <p class="img thumbnail"><a href="examples/blocks.html"><img src="/images/examples/blocks.png" width="400" height="300" alt="Blocks"></a></p>
+    <p class="img thumbnail"><a href="/ja/examples/blocks.html"><img src="/images/examples/blocks.png" width="400" height="300" alt="Blocks"></a></p>
   </div>
   <div class="grid-item-1">
     <h3>Flappy</h3>
-    <p class="img thumbnail"><a href="examples/flappy.html"><img src="/images/examples/flappy.png" width="400" height="300" alt="Flappy"></a></p>
+    <p class="img thumbnail"><a href="/ja/examples/flappy.html"><img src="/images/examples/flappy.png" width="400" height="300" alt="Flappy"></a></p>
   </div>
   <div class="grid-item-1">
     <h3>その他サンプル 30 以上</h3>
-    <p class="img thumbnail"><a href="examples/"><img src="/images/moreexamples.png" width="400" height="300" alt="More examples"></a></p>
+    <p class="img thumbnail"><a href="/ja/examples/"><img src="/images/moreexamples.png" width="400" height="300" alt="More examples"></a></p>
   </div>
 </div>
 <h2>Ebitengine の特徴</h2>
