contents/index: add game links for the gold sponsors

--- a/contents/index.html
+++ b/contents/index.html
@@ -60,16 +60,16 @@
 <h2>Sponsors</h2>
 <h3>Gold</h3>
 <div class="grid-container">
-  <div class="grid-item-1">
+  <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://odencat.com/"><img src="/images/odencat.png" width="168"></a></p>
-      <figcaption><a href="https://odencat.com/">Odencat Inc.</a></figcaption>
+      <figcaption><a href="https://odencat.com/">Odencat Inc.</a><br>(Works: <a href="https://odencat.com/bearsrestaurant/switch/en.html">Bear's Restaurant</a>, <a href="https://odencat.com/fishingparadiso/en.html">Fishing Paradiso</a>, <a href="https://odencat.com/en/game/mousebusters/">Mousebusters</a>, etc.)</figcaption>
     </figure>
   </div>
-  <div class="grid-item-1">
+  <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.jpg" width="168"></a></p>
-      <figcaption><a href="https://symbolic.software/">Symbolic Software</a></figcaption>
+      <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(Works: <a href="https://drkobushi.com">Dr. Kobushi's Labyrinthine Laboratory</a>)</figcaption>
     </figure>
   </div>
 </div>
