--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -60,16 +60,16 @@
 <h2>スポンサー</h2>
 <h3>ゴールド</h3>
 <div class="grid-container">
-  <div class="grid-item-1">
+  <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://odencat.com/"><img src="/images/odencat.png" width="168"></a></p>
-      <figcaption><a href="https://odencat.com/">Odencat 株式会社</a></figcaption>
+      <figcaption><a href="https://odencat.com/">Odencat 株式会社</a><br>(作品: <a href="https://odencat.com/bearsrestaurant/switch/ja.html">くまのレストラン</a>、<a href="https://odencat.com/fishingparadiso/ja.html">フィッシングパラダイス</a>、<a href="https://odencat.com/ja/game/mousebusters/">ねずみバスターズ</a>、他)</figcaption>
     </figure>
   </div>
-  <div class="grid-item-1">
+  <div class="grid-item-2">
     <figure>
       <p class="img avatar"><a href="https://symbolic.software/"><img src="/images/symbolic_software.jpg" width="168"></a></p>
-      <figcaption><a href="https://symbolic.software/">Symbolic Software</a></figcaption>
+      <figcaption><a href="https://symbolic.software/">Symbolic Software</a><br>(作品: <a href="https://drkobushi.com">こぶし博士の迷宮研究所</a>)</figcaption>
     </figure>
   </div>
 </div>
