--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -107,6 +107,7 @@
       <li><img src="/images/github.png" width="16" height="16" alt="GitHub"><a href="https://github.com/hajimehoshi/ebiten/discussions">GitHub Discussion</a></li>
       <li><img src="/images/reddit.png" width="16" height="16" alt="Reddit"><a href="https://www.reddit.com/r/ebitengine/">Reddit r/ebitengine</a></li>
       <li>😎 <a href="https://github.com/sedyh/awesome-ebitengine">Awesome Ebitengine</a></li>
+      <li><img src="/images/itchio.svg" width="16" height="16" alt="itch.io"><a href="https://itch.io/c/2030581/made-with-ebitengine">Made with Ebitengine - itch.io</a></li>
     </ul>
   </div>
   <div class="grid-item-2">
