_site/images: update icons

--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -102,10 +102,13 @@
   <div class="grid-item-2">
     <h2>コミュニティ</h2>
     <ul class="toplinks">
-      <li><img src="/images/discord.png" width="16" height="16" alt="Discord" style="transform: scale(1.25, 1.25);"><a href="https://discord.gg/3tVdM5H8cC">Discord</a></li>
-      <li><img src="/images/slack.png" width="16" height="16" alt="Slack" style="transform: scale(2, 2);"><a href="https://gophers.slack.com/app_redirect?channel=ebitengine">Slack #ebitengine</a> (<a href="https://invite.slack.golangbridge.org/">参加する</a>)</li>
+      <li><img src="/images/discord.svg" width="16" height="16" alt="Discord"><a href="https://discord.gg/3tVdM5H8cC">Discord</a></li>
+      <li><img src="/images/slack.svg" width="16" height="16" alt="Slack" style="transform: scale(2, 2);"><a href="https://gophers.slack.com/app_redirect?channel=ebitengine">Gophers Slack #ebitengine</a> (<a href="https://invite.slack.golangbridge.org/">参加する</a>)</li>
       <li><img src="/images/github.png" width="16" height="16" alt="GitHub"><a href="https://github.com/hajimehoshi/ebiten/discussions">GitHub Discussion</a></li>
-      <li><img src="/images/reddit.png" width="16" height="16" alt="Reddit"><a href="https://www.reddit.com/r/ebitengine/">Reddit r/ebitengine</a></li>
+      <li><img src="/images/reddit.svg" width="16" height="16" alt="Reddit" style="transform: scale(2, 2);"><a href="https://www.reddit.com/r/ebitengine/">Reddit r/ebitengine</a></li>
+    </ul>
+    <h2>作品リスト</h2>
+    <ul class="toplinks">
       <li>😎 <a href="https://github.com/sedyh/awesome-ebitengine">Awesome Ebitengine</a></li>
       <li><img src="/images/itchio.svg" width="16" height="16" alt="itch.io"><a href="https://itch.io/c/2030581/made-with-ebitengine">Made with Ebitengine - itch.io</a></li>
     </ul>
