contents/index: rewording

--- a/contents/index.html
+++ b/contents/index.html
@@ -107,7 +107,7 @@
       <li><img src="/images/github.png" width="16" height="16" alt="GitHub"><a href="https://github.com/hajimehoshi/ebiten/discussions">GitHub Discussion</a></li>
       <li><img src="/images/reddit.svg" width="16" height="16" alt="Reddit" style="transform: scale(2, 2);"><a href="https://www.reddit.com/r/ebitengine/">Reddit r/ebitengine</a></li>
     </ul>
-    <h2>Curated Lists</h2>
+    <h2>Lists of Works</h2>
     <ul class="toplinks">
       <li>😎 <a href="https://github.com/sedyh/awesome-ebitengine">Awesome Ebitengine</a></li>
       <li><img src="/images/itchio.svg" width="16" height="16" alt="itch.io"><a href="https://itch.io/c/2030581/made-with-ebitengine">Made with Ebitengine - itch.io</a></li>
