--- a/tmpl.html
+++ b/tmpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{.Lang}}">
   <head>
     <meta charset="utf-8">
     {{ if .Redirect }}<meta http-equiv="refresh" content="0;url={{.Redirect}}">{{ end }}
