contents/ja/documents/install: fix a text

--- a/contents/ja/documents/install.html
+++ b/contents/ja/documents/install.html
@@ -80,7 +80,7 @@ go mod init github.com/yourname/yourgame</code></pre>
 <pre><code>go mod tidy</code></pre>
 <p>最後に、プログラムを実行するために <code>go run</code> コマンドを実行します:</p>
 <pre><code>go run .</code></pre>
-<p>メッセージを含んだウィンドウが見えるはずです:</p>
+<p>メッセージを含んだウィンドウが表示されるはずです:</p>
 <p class="img thumbnail"><img src="/images/helloworld.png" width="320" height="240" alt="Hello, World!"></p>
 
 <script>
