contents/en/documents/2.4: v2.4.5 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -120,3 +120,9 @@
   <li>Some gamepad mappings didn't work correctly (<a href="https://github.com/hajimehoshi/ebiten/issues/2334">#2334</a>).</li>
   <li>An application could deadlock on browsers (<a href="https://github.com/hajimehoshi/ebiten/issues/2339">#2339</a>).</li>
 </ul>
+<h2>v2.4.5</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/94?closed=1">Issues for v2.4.5</a></p>
+<h3>Bug fixes</h3>
+<ul>
+  <li>An application crashed when <code>DrawImage</code> is called and then <code>WritePixels</code> for a partial region is called on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2346">#2346</a>).</li>
+</ul>
