--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -111,3 +111,9 @@
   <li>一部のゲームパッドマッピングが正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2334">#2334</a>)。</li>
   <li>ブラウザ上でアプリケーションがデッドロックすることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2339">#2339</a>).</li>
 </ul>
+<h2>v2.4.5</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/94?closed=1">Issues for v2.4.5</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>Android で、 <code>DrawImage</code> が呼ばれた後に、一部分の領域に対して <code>WritePixels</code> が呼ばれるとアプリケーションがクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2346">#2346</a>)。</li>
+</ul>
