contents/en/documents/2.4: fix

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -124,5 +124,5 @@
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/94?closed=1">Issues for v2.4.5</a></p>
 <h3>Bug fixes</h3>
 <ul>
-  <li>An application crashed when <code>DrawImage</code> is called and then <code>WritePixels</code> for a partial region is called on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2346">#2346</a>).</li>
+  <li>An application crashed when <code>DrawImage</code> was called and then <code>WritePixels</code> for a partial region was called on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2346">#2346</a>).</li>
 </ul>
