contents/en/documents/2.4: v2.4.7 released

--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -124,3 +124,9 @@
   <li>Android で、アプリケーションを切り替えた時に、特定の条件下で、描画された画像が予期せず消えてしまった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2354">#2354</a>)。</li>
   <li>スクリーン上での<code>(*ebiten.Image).Set</code> で、他に描画コマンドがない場合に正しく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2362">#2362</a>)。</li>
 </ul>
+<h2>v2.4.7</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/96?closed=1">Issues for v2.4.7</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>Windows で、 Ebitengine アプリケーションが「アクセス拒否」エラーで起動に失敗することがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2366">#2366</a>)。</li>
+</ul>
