--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -133,3 +133,9 @@
   <li>A rendered image unexpectedly disappeared under certain conditions when switching applications on Android (<a href="https://github.com/hajimehoshi/ebiten/issues/2354">#2354</a>).</li>
   <li><code>(*ebiten.Image).Set</code> on the screen without any other draw commands didn't work correctly (<a href="https://github.com/hajimehoshi/ebiten/issues/2362">#2362</a>).</li>
 </ul>
+<h2>v2.4.7</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/96?closed=1">Issues for v2.4.7</a></p>
+<h3>Bug fixes</h3>
+<ul>
+  <li>Launching an Ebitengine application might fail due to an access-denied error on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2366">#2366</a>).</li>
+</ul>
