--- a/tmpl.html
+++ b/tmpl.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" type="text/css" href="/styles/style.css">
     <link rel="icon" href="/images/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.css" integrity="sha384-bYdxxUwYipFNohQlHt0bjN/LCpueqWz13HufFEV1SUatKs1cm4L6fFgCi1jT643X" crossorigin="anonymous">
+    {{ range .AltPages }}{{ if .Available }}<link rel="alternate" hreflang="{{.Lang}}" href="{{.AbsURL}}">{{ end }}
+{{ end }}
     <script src="/scripts/script.js" defer></script>
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.js" integrity="sha384-Qsn9KnoKISj6dI8g7p1HBlNpVx0I8p1SvlwOldgi3IorMle61nQy4zEahWYtljaz" crossorigin="anonymous"></script>
     <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "909e4403b96c402996fca889d074c29f"}'></script><!-- End Cloudflare Web Analytics -->
@@ -30,7 +32,7 @@
     <nav>
       <h1><a href="{{ .Top }}">Ebitengine™</a></h1>
       <ul id="language">{{ range .AltPages }}
-        {{ if .Available }}<li><a href="{{.URL}}">{{.Title}}</a></li>{{ else }}<li class="active">{{.Title}}</li>{{ end }}
+        {{ if .Available }}<li><a href="{{.RelURL}}">{{.Title}}</a></li>{{ else }}<li class="active">{{.Title}}</li>{{ end }}
       {{ end }}</ul>
       <ul>
         <li><a href="https://ebiten-zh.vercel.app/">中文</a></li>
