contents/documents/2.4: v2.4.8 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -139,3 +139,9 @@
 <ul>
   <li>Launching an Ebitengine application might fail due to an access-denied error on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2366">#2366</a>).</li>
 </ul>
+<h2>v2.4.8</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/97?closed=1">Issues for v2.4.8</a></p>
+<h3>Bug fixes</h3>
+<ul>
+  <li>Creating an unmanged image at a different goroutine might result in glitches (<a href="https://github.com/hajimehoshi/ebiten/issues/2390">#2390</a>).</li>
+</ul>
