--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -130,3 +130,9 @@
 <ul>
   <li>Windows で、 Ebitengine アプリケーションが「アクセス拒否」エラーで起動に失敗することがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2366">#2366</a>)。</li>
 </ul>
+<h2>v2.4.8</h2>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/97?closed=1">Issues for v2.4.8</a></p>
+<h3>バグ修正</h3>
+<ul>
+  <li>違う Goroutine 上でアンマネージドな画像を作るとノイズが生じていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2390">#2390</a>)。</li>
+</ul>
