contents/en/documents/2.4: update

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -143,5 +143,5 @@
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/97?closed=1">Issues for v2.4.8</a></p>
 <h3>Bug fixes</h3>
 <ul>
-  <li>Creating an unmanged image at a different goroutine might result in glitches (<a href="https://github.com/hajimehoshi/ebiten/issues/2390">#2390</a>).</li>
+  <li>Creating an unmanged image in a different goroutine might result in glitches (<a href="https://github.com/hajimehoshi/ebiten/issues/2390">#2390</a>).</li>
 </ul>
