--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -152,3 +152,9 @@
   <li><code>ebiten.SetVsyncEnabled</code> caused a hang for iOS (<a href="https://github.com/hajimehoshi/ebiten/issues/2407">#2407</a>).</li>
   <li>Updated an indirect dependency <code>golang.org/x/text/language</code> that had an security issue (<a href="https://pkg.go.dev/vuln/GO-2022-1059">GO-2022-1059</a>) (<a href="https://github.com/hajimehoshi/ebiten/issues/2411">#2411</a>).</li>
 </ul>
+<h2>v2.4.10</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/99?closed=1">Issues for v2.4.10</a></p>
+<ul>
+  <li>An Engtengine application crashed by <code>WritePixels</code> for an already disposed image (<a href="https://github.com/hajimehoshi/ebiten/issues/2423">#2423</a>).</li>
+</ul>
