contents/en/documents/2.4: v2.4.11 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -158,3 +158,9 @@
 <ul>
   <li>An Engtengine application crashed by <code>WritePixels</code> for an already disposed image (<a href="https://github.com/hajimehoshi/ebiten/issues/2423">#2423</a>).</li>
 </ul>
+<h2>v2.4.11</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/100?closed=1">Issues for v2.4.11</a></p>
+<ul>
+  <li>Calling <code>(*Image).Set</code> and getting a color by <code>At</code> on a sub-image resulted in an unexpected color (<a href="https://github.com/hajimehoshi/ebiten/issues/2428">#2428</a>).</li>
+</ul>
