en/documents/2.4: v2.4.12 released

--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -153,5 +153,11 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/100?closed=1">Issues for v2.4.11</a></p>
 <ul>
-  <li><code>(*Image).Set</code> を呼んだ後に部分画像に対して <code>At</code> で色を取得した場合、予期せぬ色になっていた問題を修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2428">#2428</a>).</li>
+  <li><code>(*Image).Set</code> を呼んだ後に部分画像に対して <code>At</code> で色を取得した場合、予期せぬ色になっていた問題を修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2428">#2428</a>)。</li>
+</ul>
+<h2>v2.4.12</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/101?closed=1">Issues for v2.4.12</a></p>
+<ul>
+  <li>macOS 13 でフルスクリーン化がうまく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2437">#2437</a>)。</li>
 </ul>
