--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -164,3 +164,9 @@
 <ul>
   <li>Calling <code>(*Image).Set</code> and getting a color by <code>At</code> on a sub-image resulted in an unexpected color (<a href="https://github.com/hajimehoshi/ebiten/issues/2428">#2428</a>).</li>
 </ul>
+<h2>v2.4.12</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/101?closed=1">Issues for v2.4.12</a></p>
+<ul>
+  <li>Fullscreening didn't work correctly on macOS 13 (<a href="https://github.com/hajimehoshi/ebiten/issues/2437">#2437</a>).</li>
+</ul>
