--- a/contents/index.html
+++ b/contents/index.html
@@ -83,6 +83,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/Sidewinder1138"><img src="https://github.com/Sidewinder1138.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/Sidewinder1138">Christopher Anderson</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><a href="https://github.com/silbinarywolf"><img src="https://github.com/silbinarywolf.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/silbinarywolf">Jae Bentvelzen</a></figcaption>
     </figure>
