internal/gen: calculate the latest branch by a program

--- a/contents/en/examples/tmpl.html
+++ b/contents/en/examples/tmpl.html
@@ -5,5 +5,5 @@
 <pre><code>go run -tags=example github.com/hajimehoshi/ebiten/v2/examples/{{.Base}}@latest</code></pre>
 {{if .Code}}
 <h2>Code</h2>
-<pre data-codesrc="https://raw.githubusercontent.com/hajimehoshi/ebiten/2.4/examples/{{.Base}}/main.go"></pre>
+<pre data-codesrc="https://raw.githubusercontent.com/hajimehoshi/ebiten/{{.LatestBranch}}/examples/{{.Base}}/main.go"></pre>
 {{end -}}
