contents/en/documents: v2.4.13 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -170,3 +170,10 @@
 <ul>
   <li>Fullscreening didn't work correctly on macOS 13 (<a href="https://github.com/hajimehoshi/ebiten/issues/2437">#2437</a>).</li>
 </ul>
+<h2>v2.4.13</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/102?closed=1">Issues for v2.4.13</a></p>
+<ul>
+  <li>An Ebitengine application crashed with some old graphics card on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2447">#2447</a>).</li>
+  <li>An inefficient software graphics renderer might unexpectedly be used on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2459">#2459</a>).</li>
+</ul>
