--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -161,3 +161,10 @@
 <ul>
   <li>macOS 13 でフルスクリーン化がうまく動かなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2437">#2437</a>)。</li>
 </ul>
+<h2>v2.4.13</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/102?closed=1">Issues for v2.4.13</a></p>
+<ul>
+  <li>Windows で、いくつかの古いグラフィックスカードで Ebitengine アプリケーションがクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2447">#2447</a>)。</li>
+  <li>Windows で、非効率的なソフトウェアレンダラが予期せず使われることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2459">#2459</a>)。</li>
+</ul>
