--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -77,6 +77,12 @@
 <div class="grid-container">
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/erexo"><img src="https://github.com/erexo.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/erexo">Kacper Drobny さん</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><a href="https://github.com/seanoneillcode"><img src="https://github.com/seanoneillcode.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/seanoneillcode">Sean O'Neill さん</a></figcaption>
     </figure>
