contents/en/documents/2.4: v2.4.14 released

--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -168,3 +168,11 @@
   <li>Windows で、いくつかの古いグラフィックスカードで Ebitengine アプリケーションがクラッシュした問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2447">#2447</a>)。</li>
   <li>Windows で、非効率的なソフトウェアレンダラが予期せず使われることがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2459">#2459</a>)。</li>
 </ul>
+<h2>v2.4.14</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/103?closed=1">Issues for v2.4.14</a></p>
+<ul>
+  <li>Windows で <a href="https://github.com/hajimehoshi/ebiten/issues/2447">#2447</a> の修正の影響でクラッシュしていた問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2466">#2466</a>、 <a href="https://github.com/hajimehoshi/ebiten/issues/2486">#2486</a>)。</li>
+  <li>Windows でファイルをウィンドウにドロップしたときにクラッシュする問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2480">#2480</a>)。</li>
+  <li>マウスのホイールを素早くスクロールしたときに、 <code>ebiten.Wheel</code> が値を取りこぼすことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2487">#2487</a>)。</li>
+</ul>
