contents/en/documents/2.4: fix

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -182,6 +182,6 @@
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/103?closed=1">Issues for v2.4.14</a></p>
 <ul>
   <li>An Ebitengine application crashed due to the fix for <a href="https://github.com/hajimehoshi/ebiten/issues/2447">#2447</a> on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2466">#2466</a>, <a href="https://github.com/hajimehoshi/ebiten/issues/2486">#2486</a>).</li>
-  <li>An Ebitengine application crashed when a file was dropped onto the window on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2480">#2480</a>).</li>
+  <li>An Ebitengine application crashed when a file was dropped onto a window on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2480">#2480</a>).</li>
   <li><code>ebiten.Wheel</code> might miss some values when scrolling a wheel too quickly (<a href="https://github.com/hajimehoshi/ebiten/issues/2487">#2487</a>).</li>
 </ul>
