contents/en/documents/2.4: v2.4.15 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -185,3 +185,9 @@
   <li>An Ebitengine application crashed when a file was dropped onto a window on Windows (<a href="https://github.com/hajimehoshi/ebiten/issues/2480">#2480</a>).</li>
   <li><code>ebiten.Wheel</code> might miss some values when scrolling a wheel too quickly (<a href="https://github.com/hajimehoshi/ebiten/issues/2487">#2487</a>).</li>
 </ul>
+<h2>v2.4.15</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/104?closed=1">Issues for v2.4.15</a></p>
+<ul>
+  <li>FPS was unstable in fullscreen on macOS 13 (<a href="https://github.com/hajimehoshi/ebiten/issues/2495">#2495</a>).</li>
+</ul>
