--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -176,3 +176,9 @@
   <li>Windows でファイルをウィンドウにドロップしたときにクラッシュする問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2480">#2480</a>)。</li>
   <li>マウスのホイールを素早くスクロールしたときに、 <code>ebiten.Wheel</code> が値を取りこぼすことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2487">#2487</a>)。</li>
 </ul>
+<h2>v2.4.15</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/104?closed=1">Issues for v2.4.15</a></p>
+<ul>
+  <li>macOS 13 でフルスクリーンで FPS が不安定だった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2495">#2495</a>)。</li>
+</ul>
