--- a/contents/ja/index.html
+++ b/contents/ja/index.html
@@ -89,6 +89,12 @@
   </div>
   <div class="grid-item-1">
     <figure>
+      <p class="img avatar"><a href="https://github.com/pierrec"><img src="https://github.com/pierrec.png?size=168" width="168"></a></p>
+      <figcaption><a href="https://github.com/pierrec">Pierre Curto さん</a></figcaption>
+    </figure>
+  </div>
+  <div class="grid-item-1">
+    <figure>
       <p class="img avatar"><a href="https://github.com/sedyh"><img src="https://github.com/sedyh.png?size=168" width="168"></a></p>
       <figcaption><a href="https://github.com/sedyh">Artem Sedykh さん</a></figcaption>
     </figure>
