--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -191,3 +191,9 @@
 <ul>
   <li>FPS was unstable in fullscreen on macOS 13 (<a href="https://github.com/hajimehoshi/ebiten/issues/2495">#2495</a>).</li>
 </ul>
+<h2>v2.4.16</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/105?closed=1">Issues for v2.4.16</a></p>
+<ul>
+  <li><code>Fill</code> and <code>Set</code> for a screen in this order might not update the screen correctly (<a href="https://github.com/hajimehoshi/ebiten/issues/2542">#2542</a>).</li>
+</ul>
