--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -182,3 +182,9 @@
 <ul>
   <li>macOS 13 でフルスクリーンで FPS が不安定だった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2495">#2495</a>)。</li>
 </ul>
+<h2>v2.4.16</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/105?closed=1">Issues for v2.4.16</a></p>
+<ul>
+  <li>スクリーンに対する <code>Fill</code> と <code>Set</code> をこの順で行った時、正しくスクリーンを更新しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2542">#2542</a>)。</li>
+</ul>
