contents/en/documents/shader: add a link to Kage's desk

--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -201,6 +201,10 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   (\text{pixels}) &= (\text{texels}) \cdot (\text{the texture's size in pixels}) \\
   \end{aligned}</p>
 <p class="img"><img src="/images/documents/shader/textureandimage.png" width="456"></p>
+<h2>Tutorials</h2>
+<ul>
+  <li><a href="https://github.com/tinne26/kage-desk">Kage's desk</a></li>
+</ul>
 <h2>Editor Plugins</h2>
 <p>There are plugins for some editors by volunteers to edit Kage programs.</p>
 <ul>
