--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -201,6 +201,10 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   (\text{pixels}) &= (\text{texels}) \cdot (\text{the texture's size in pixels}) \\
   \end{aligned}</p>
 <p class="img"><img src="/images/documents/shader/textureandimage.png" width="456"></p>
+<h2>チュートリアル</h2>
+<ul>
+  <li><a href="https://github.com/tinne26/kage-desk">Kage's desk</a> (英語)</li>
+</ul>
 <h2>エディタのプラグイン</h2>
 <p>Kage プログラムを編集するための、有志によるエディタプラグインがあります。</p>
 <ul>
