contents/en/documents/2.4: v2.4.17 released

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -197,3 +197,9 @@
 <ul>
   <li><code>Fill</code> and <code>Set</code> for a screen in this order might not update the screen correctly (<a href="https://github.com/hajimehoshi/ebiten/issues/2542">#2542</a>).</li>
 </ul>
+<h2>v2.4.17</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/106?closed=1">Issues for v2.4.17</a></p>
+<ul>
+  <li>Image functions called before <code>(*ebiten.Game).Run</code> were not concurrent-safe (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>).</li>
+</ul>
