--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -188,3 +188,9 @@
 <ul>
   <li>スクリーンに対する <code>Fill</code> と <code>Set</code> をこの順で行った時、正しくスクリーンを更新しないことがあった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2542">#2542</a>)。</li>
 </ul>
+<h2>v2.4.17</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/106?closed=1">Issues for v2.4.17</a></p>
+<ul>
+  <li><code>(*ebiten.Game).Run</code> 以前に呼ばれた画像の関数が、コンカレントセーフでなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>)。</li>
+</ul>
