contents/en/documents/2.4: update

--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -201,5 +201,5 @@
 <h3>Bug fixes</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/106?closed=1">Issues for v2.4.17</a></p>
 <ul>
-  <li>Image functions called before <code>(*ebiten.Game).Run</code> were not concurrent-safe (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>).</li>
+  <li>Image functions called before <code>ebiten.RunGame</code> were not concurrent-safe (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>).</li>
 </ul>
