--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -192,5 +192,5 @@
 <h3>バグ修正</h3>
 <p><a href="https://github.com/hajimehoshi/ebiten/milestone/106?closed=1">Issues for v2.4.17</a></p>
 <ul>
-  <li><code>(*ebiten.Game).Run</code> 以前に呼ばれた画像の関数が、コンカレントセーフでなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>)。</li>
+  <li><code>ebiten.RunGame</code> 以前に呼ばれた画像の関数が、コンカレントセーフでなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>)。</li>
 </ul>
