--- a/contents/en/documents/mobile.html
+++ b/contents/en/documents/mobile.html
@@ -33,6 +33,7 @@ func Dummy() {}</code></pre>
 <p>The key function is <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/mobile#SetGame"><code>SetGame</code></a>. Do not call <a href="https://pkg.go.dev/github.com/hajimehoshi/ebiten/v2/#RunGame"><code>RunGame</code></a>, which you usually use for desktop games.</p>
 
 <h3>Android</h3>
+<p>The minimum required Android SDK version is 16.</p>
 <p>Set up these environment variables:</p>
 <ul>
   <li><code>ANDROID_HOME</code></li>
@@ -87,6 +88,7 @@ public class MainActivity extends AppCompatActivity {
 }</code></pre>
 
 <h3>iOS</h3>
+<p>The minimum required iOS version is 13.0.</p>
 <p>Run <code>ebitenmobile bind</code> command for your package:</p>
 <pre><code>cd /path/to/yourgame
 ebitenmobile bind -target ios -o path/to/YourGame.xcframework .</code></pre>
