--- a/contents/en/documents/shader.html
+++ b/contents/en/documents/shader.html
@@ -178,9 +178,9 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   <tr><th><code>reflect(i, n T) T</code></th><td>Returns <span class="math">i - 2 \cdot \mathrm{dot}(n, i) \cdot n</span></td></tr>
   <tr><th><code>refract(i, n T, eta float) T</code></th><td>(v2.4.0)</td></tr>
   <tr><th><code>transpose(m T) T</code></th><td><code>T</code> is a matrix type. Returns a matrix that is the transpose of <span class="math">x</span></td></tr>
-  <tr><th><code>dfdx(p T) T</code></th><td></td></tr>
-  <tr><th><code>dfdy(p T) T</code></th><td></td></tr>
-  <tr><th><code>fwidth(p T) T</code></th><td></td></tr>
+  <tr><th><code>dfdx(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
+  <tr><th><code>dfdy(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
+  <tr><th><code>fwidth(p T) T</code></th><td>(Note that this function's results depend on internal states and are indeterministic)</td></tr>
 </table>
 <h3>Built-in functions (images)</h3>
 <table>
