--- a/contents/ja/documents/shader.html
+++ b/contents/ja/documents/shader.html
@@ -178,9 +178,9 @@ v2.xyz = v2.xxx        // Get vec3(1, 1, 1), and set it to all the components to
   <tr><th><code>reflect(i, n T) T</code></th><td><span class="math">i - 2 \cdot \mathrm{dot}(n, i) \cdot n</span> を返す。</td></tr>
   <tr><th><code>refract(i, n T, eta float) T</code></th><td>(v2.4.0)</td></tr>
   <tr><th><code>transpose(m T) T</code></th><td><code>T</code> は行列型。<span class="math">x</span> の転置行列を返す。</td></tr>
-  <tr><th><code>dfdx(p T) T</code></th><td></td></tr>
-  <tr><th><code>dfdy(p T) T</code></th><td></td></tr>
-  <tr><th><code>fwidth(p T) T</code></th><td></td></tr>
+  <tr><th><code>dfdx(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
+  <tr><th><code>dfdy(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
+  <tr><th><code>fwidth(p T) T</code></th><td>(注意: この関数の結果は内部の状態に依存し、非決定的です。)</td></tr>
 </table>
 <h3>組み込み関数 (画像)</h3>
 <table>
