contents/en/documents/2.4: v2.4.18 released

--- a/contents/ja/documents/2.4.html
+++ b/contents/ja/documents/2.4.html
@@ -194,3 +194,9 @@
 <ul>
   <li><code>ebiten.RunGame</code> 以前に呼ばれた画像の関数が、コンカレントセーフでなかった問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>)。</li>
 </ul>
+<h2>v2.4.18</h2>
+<h3>バグ修正</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/107?closed=1">Issues for v2.4.18</a></p>
+<ul>
+  <li>テクスチャパッキングのバグで Ebitengine アプリケーションがクラッシュしうる問題の修正 (<a href="https://github.com/hajimehoshi/ebiten/issues/2584">#2584</a>)。</li>
+</ul>
