--- a/contents/en/documents/2.4.html
+++ b/contents/en/documents/2.4.html
@@ -203,3 +203,9 @@
 <ul>
   <li>Image functions called before <code>ebiten.RunGame</code> were not concurrent-safe (<a href="https://github.com/hajimehoshi/ebiten/issues/2580">#2580</a>).</li>
 </ul>
+<h2>v2.4.18</h2>
+<h3>Bug fixes</h3>
+<p><a href="https://github.com/hajimehoshi/ebiten/milestone/107?closed=1">Issues for v2.4.18</a></p>
+<ul>
+  <li>An Ebitengine application could crash due to a bug in the texture packing (<a href="https://github.com/hajimehoshi/ebiten/issues/2584">#2584</a>).</li>
+</ul>
