contents/en/documents/webassembly: fix

--- a/contents/en/documents/webassembly.html
+++ b/contents/en/documents/webassembly.html
@@ -4,7 +4,7 @@
 <pre><code>go run github.com/hajimehoshi/wasmserve@latest ./path/to/yourgame</code></pre>
 <p>Then access <code>http://localhost:8080/</code>.</p>
 <h2>Option 2. Compiling by yourself</h2>
-<p>If you want to publish your game, you'd need to compile your game by yourself.</p>
+<p>If you want to publish your game, you need to compile your game by yourself.</p>
 <h3>Compiling your game</h3>
 <p>On a Unix/Linux shell:</p>
 <pre><code>env GOOS=js GOARCH=wasm go build -o yourgame.wasm github.com/yourname/yourgame</code></pre>
